--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ Global attributes begin here
 */
 :root {
     --primary: #7f47af;
+    --primary50: rgba(126, 71, 175, 0.5);
     --secondary: #501b7e;
     --light: #e3dce9;
     --dark: #21142c;
@@ -11,6 +12,10 @@ Global attributes begin here
 
 * {
     color: var(--dark);
+}
+
+body {
+    background-color: var(--light);
 }
 
 /*
@@ -36,7 +41,6 @@ Main starts here
 main {
     display: flex;
     flex-direction: row;
-    background-color: var(--light);
 }
 
 /*
@@ -46,12 +50,7 @@ Search form starts here
     width: 22%;
 }
 
-aside * {
-    border: 2px solid rgba(0,0,0,0.5);
-}
-
 aside > * {     /* margins + display parameters */
-    border: 2px solid rgba(0,0,0,0.5);
     margin: 0 4px;
     padding: 10px 0;
     row-gap: 10px;
@@ -63,6 +62,15 @@ aside > * {     /* margins + display parameters */
 
 input {
     background-color: var(--light);
+    padding: 5px;
+}
+
+button {
+    padding: 5px;
+}
+
+form {
+    border-bottom: 2px solid var(--primary);
 }
 
 /*
@@ -78,7 +86,6 @@ h2 {
 }
 
 .sixty-seven > * {
-    border: 2px solid rgba(0,0,0,0.5);
     margin: 10px;
 
     display: flex;
@@ -90,6 +97,11 @@ h2 {
     margin: 10px 0;
 }
 
+.weather {
+    border: 2px solid var(--dark);
+    padding: 0 5px;
+}
+
 #psuedo-header {
     display: flex;
     flex-direction: row;
@@ -97,8 +109,23 @@ h2 {
     gap: 10px;
 }
 
+.forecast {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-column-gap: 2vw;
+}
+
+.forecast * {
+    margin: 10px 0;
+}
+
+.card {
+    background-color: var(--primary50);
+    padding: 0 5px;
+}
+
 .icon {
     width: 28px;
     height: min-content;
-    /* border: 3px solid red; */
+    margin: 0;
 }
